--- a/style.css
+++ b/style.css
@@ -2,28 +2,24 @@ body{
     box-sizing: border-box;
     margin: 0;
     background-color: hsl(264, 82%, 80%);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-#profile{
-    display: flex;
-}
-table{
-    width: 70%;
+    display: grid;
+    grid-template-columns: reapet(4, 1fr);
+    grid-template-rows: reapeat(2 , auto);
     gap: 20px;
-    border-collapse: separate;
-    border-spacing: 10px 20px;
-}
-
-td{
-    border-radius: 15px;
-    padding: 20px;
-    text-align:justify;
-    
+    padding: 40px;
+    color:white;
 
 }
+.profile{
+    display: flex;
+    gap: 10px;
+}
 
+.data{
+    margin-top: 20px;
+    margin-bottom: 20px;
+
+}
 img{
     border-radius: 50%;
 }
@@ -34,20 +30,44 @@ strong{
 
 #daniel{
     background-color: hsl(263, 55%, 52%);
+    grid-column: 1 / 3;
+    grid-row: 1;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 #jonathan{
     background-color: hsl(219, 29%, 14%);
+    grid-column: 3;
+    grid-row: 1;
+    padding: 20px;
+    border-radius: 10px;
 }
+
 #kira{
     background-color: purple;
+    grid-column: 4;
+    grid-row: 1/3;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
     
 }
 
 #jeanette{
     background-color: #fff;
+    grid-column: 1;
+    grid-row: 2;
+    color: black;
+    padding: 20px;
+    border-radius: 10px;
 }
 
 #patrick{
     background-color: hsl(0, 0%, 7%);
+    grid-column: 2 / 4;
+    grid-row: 2;
+    color: white;
+    padding: 20px;
+    border-radius: 10px;
 }
